Fixed paragraph spacing on mobile.

--- a/src/assets/css/content.css
+++ b/src/assets/css/content.css
@@ -42,6 +42,7 @@
 
 .content p {
     padding-bottom: 1.5rem;
+    text-wrap: balance;
 }
 
 .content_about {
@@ -67,5 +68,11 @@
     }
     .line_break {
         margin-bottom: 3rem;
+    }
+}
+
+@media (max-width: 650px) {
+    .content_about {
+        width: 100%;
     }
 }
